[gd_scene load_steps=3 format=3 uid="uid://bll1gjahn6i7g"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_l1qqr"]
[ext_resource type="Texture2D" uid="uid://cqvqrxuxky4ih" path="res://assets/sprites/logo copiar.png" id="2_y8hp7"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
script = ExtResource("1_l1qqr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -373.0
offset_top = -506.0
offset_right = 392.0
offset_bottom = -215.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_y8hp7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="New Game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="Rewards" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Rewards"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Credits"

[node name="START!" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START!"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/New Game" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Rewards" to="." method="_on_rewards_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/START!" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
